[package]
name = "argus-shared"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared IPC protocol types (manager ↔ engine messages) for the Argus on-device LLM inference framework."
repository = "https://github.com/hedone21/argus-shared"
authors = ["Argus contributors"]
keywords = ["llm", "inference", "ipc", "on-device", "edge"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
